# book_cmake_code

./: .clang-format  .gitmodules  LICENSE  README.md
.github/workflows/: c-cpp.yml
Kapitel_10/Code_10.1/: CMakeLists.txt
Kapitel_10/Code_10.1/src/: mathe.cpp
Kapitel_10/Code_10.1/test/: tst_addieren.cpp
Kapitel_10/Code_10.2/: CMakeLists.txt
Kapitel_10/Code_10.2/src/: mathe.cpp
Kapitel_10/Code_10.3/: CMakeLists.txt
Kapitel_10/Code_10.3/include/: mathe.h
Kapitel_10/Code_10.3/src/: mathe.cpp
Kapitel_10/Code_10.3/test/: tst_addieren.cpp  tst_addieren_advanced.cpp  tst_addieren_subtrahieren.cpp  tst_multiplizieren.cpp  tst_subtrahieren.cpp  tst_subtrahieren_advanced.cpp
Kapitel_10/Code_10.4/: CMakeLists.txt
Kapitel_10/Code_10.4/test/: tst_addieren.cpp
Kapitel_10/Code_10.5/: CMakeLists.txt
Kapitel_10/Code_10.5/test/: tst_addieren.cpp
Kapitel_11/Code_11.1/: CMakeLists.txt
Kapitel_11/Code_11.1/include/: mathe.h
Kapitel_11/Code_11.2/: CMakeLists.txt
Kapitel_11/Code_11.2/include/: mathe.h
Kapitel_11/Code_11.3/: CMakeLists.txt
Kapitel_11/Code_11.3/include/: mathe.h
Kapitel_11/Code_11.3/test/: tst_addieren.cpp
Kapitel_2/Beispiel_1/: CMakeLists.txt
Kapitel_3/Code_3.1/: CMakeLists.txt
Kapitel_3/Code_3.2/: CMakeLists.txt
Kapitel_3/Code_3.3/: CMakeLists.txt
Kapitel_4/Code_4.1/: CMakeLists.txt  hello_world_printer.cpp  hello_world_printer.h  main.cpp
Kapitel_4/Code_4.2/: CMakeLists.txt
Kapitel_4/Code_4.3/: CMakeLists.txt
Kapitel_4/Code_4.4/: CMakeLists.txt
Kapitel_4/Code_4.5/: CMakeLists.txt
Kapitel_4/Code_4.5/Code_4.6/src/: mathe.h
Kapitel_4/Code_4.5/src/: rechteck_flaeche.cpp  rechteck_umfang.cpp
Kapitel_4/Code_4.6/: CMakeLists.txt
Kapitel_4/Code_4.6/src/: addieren.cpp  mathe.h  rechteck_umfang.cpp
Kapitel_4/Code_4.7/: CMakeLists.txt
Kapitel_4/Code_4.7/src/: addieren.cpp  mathe.h  rechteck_flaeche.cpp
Kapitel_4/Code_4.8/: CMakeLists.txt
Kapitel_5/Code_5.1/: CMakeLists.txt
Kapitel_5/Code_5.2/: CMakeLists.txt
Kapitel_5/Code_5.3/: CMakeLists.txt
Kapitel_5/Code_5.3/include/main_bib/: main_bib.h
Kapitel_5/Code_5.3/include/private_bib/: private_bib.h
Kapitel_5/Code_5.3/include/public_bib/: public_bib.h
Kapitel_5/Code_5.3/src/: main.cpp
Kapitel_5/Code_5.3/src/main_bib/: main_bib.cpp
Kapitel_5/Code_5.3/src/private_bib/: private_bib.cpp
Kapitel_5/Code_5.3/src/public_bib/: public_bib.cpp
Kapitel_6/Code_6.1/: CMakeLists.txt  main.cpp
Kapitel_6/Code_6.2/: CMakeLists.txt
Kapitel_7/Code_7.1/: CMakeLists.txt
Kapitel_7/Code_7.1/libs/math/: CMakeLists.txt  mathe.cpp
Kapitel_7/Code_7.1/src/: main.cpp
Kapitel_7/Code_7.2/: CMakeLists.txt
Kapitel_7/Code_7.2/libs/math/: CMakeLists.txt
Kapitel_7/Code_7.3/: CMakeLists.txt
Kapitel_7/Code_7.3/libs/math/: CMakeLists.txt  mathe.h
Kapitel_7/Code_7.3/src/: main.cpp
Kapitel_8/Code_8.1/: CMakeLists.txt  main.cpp
Kapitel_9/Code_9.1/: CMakeLists.txt
Kapitel_9/Code_9.2/: CMakeLists.txt
Kapitel_9/Code_9.3/: CMakeLists.txt
Kapitel_9/Code_9.4/: CMakeLists.txt  main.cpp
Kapitel_9/Code_9.5/: CMakeLists.txt  main.cpp
Kapitel_9/Code_9.5/cmake/: FindGSL.cmake
Kapitel_9/Code_9.6/: CMakeLists.txt  main.cpp
Kapitel_9/Code_9.6/cmake/: FindGLIB2.cmake  FindLibXml2.cmake
scripts/: download_glib_win.ps1  glib_win_install.ps1  install_glib_win.ps1  install_glib_win.sh
